[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Scr_UI/UI.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Scr_Player/PlayerScript.gd" type="Script" id=2]
[ext_resource path="res://Player/BoxCrosshair.png" type="Texture" id=3]
[ext_resource path="res://Player/SeekPng.com_white-transparent-png_3369209.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Tex_UI/Crosshairs/Black/crosshair009.png" type="Texture" id=5]
[ext_resource path="res://Player/Standard Walk.dae" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Scr_Managers/WeaponManager.gd" type="Script" id=7]
[ext_resource path="res://Resources/Res_Player/Player.tres" type="Resource" id=8]

[sub_resource type="CapsuleShape" id=1]
radius = 0.67

[node name="FPS" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 2 )
player_stats = ExtResource( 8 )
collider = NodePath("CollisionShape")

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.30836, -0.342839 )

[node name="WeaponManager" type="Spatial" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.10183, -0.164448, -0.269901 )
script = ExtResource( 7 )

[node name="Camera_FPS" type="Camera" parent="Head"]
keep_aspect = 0
far = 1000.0

[node name="Look" type="RayCast" parent="Head/Camera_FPS"]
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="Camera_TPS" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 0.88808, 0.459688, 0, -0.459688, 0.88808, 0, 0.0724308, 2.01925 )
fov = 80.0

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_right = 448.0
margin_bottom = 163.0
color = Color( 0.345098, 0.337255, 0.337255, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
text = "FPS: NULL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="UI"]
margin_left = 74.0
margin_right = 120.0
margin_bottom = 14.0
text = "Speed: Null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_left = 4.49887
margin_top = 146.151
margin_right = 241.499
margin_bottom = 160.151
text = "Version 1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FloorCheck" type="Label" parent="UI"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 38.0
text = "Is_On_Floor: Null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsIdle" type="Label" parent="UI"]
margin_left = 0.708298
margin_top = 53.9077
margin_right = 187.708
margin_bottom = 73.9077
text = "Is_Idle: Null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsMoving" type="Label" parent="UI"]
margin_left = -0.125092
margin_top = 35.6389
margin_right = 97.8749
margin_bottom = 55.6389
text = "Is_Moving: Null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Look" type="Label" parent="UI"]
margin_top = 73.0
margin_right = 40.0
margin_bottom = 87.0
text = "Front_Colliding: Null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BinocOverlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen" type="Sprite" parent="BinocOverlay"]
scale = Vector2( 1.65161, 2.06897 )
texture = ExtResource( 4 )
centered = false

[node name="BoxCrosshair" type="Sprite" parent="BinocOverlay"]
position = Vector2( 512, 288 )
scale = Vector2( 0.09375, 0.0625 )
texture = ExtResource( 3 )

[node name="Crosshair" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Sprite" parent="Crosshair"]
position = Vector2( 512, 288 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="Standard Walk" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.5, 0, 4.88762e-07, 0, 1.5, 0, -4.88762e-07, 0, -1.5, 0, 0, 0 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0343544, -0.05356, 0.0109281 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
collide_with_areas = true

[node name="CollisionShape" type="CollisionShape" parent="." groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 1.1, 0 )
shape = SubResource( 1 )
